<!--
  ~ Copyright 2018 Shastore Team
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software
  ~ and associated documentation files (the "Software"), to deal in the Software without
  ~ restriction, including without limitation the rights to use, copy, modify, merge, publish,
  ~ distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom
  ~ the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
  ~ FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS
  ~ OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR
  ~ IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="app_name">ShaStore</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (required)</string>
    <string name="prompt_deviceName">Name your device</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registered_devices">Registered Devices</string>
    <string name="unregister">Unregister</string>
    <string name="confirm_registration">Confirm Registration</string>
    <string name="device_unique_id">Device Unique ID</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="capture_button">Capture</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_file_selector">FileSelector</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_qrcode">QR Code</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="debug_reset_database">Reset Database</string>
    <string name="debug_print_database">Print Database</string>
    <string name="fileheaderselect_button_text">Choose File</string>
    <string name="secureFileHeaderQRCode_note">Scan this QRCode with your master device and proceed to select the .txte file</string>
</resources>
